<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Theme arrays -->
    <string-array name="theme_entries">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Material You (Dynamic)</item>
    </string-array>

    <string-array name="theme_values">
...
